--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/trs/pure-stream.git"
+    "url": "https://github.com/autovance/pure-stream.git"
   },
   "author": "Tyler Stewart",
   "license": "MIT",
