chore: specify min node version (10)

--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   },
   "author": "Tyler Stewart",
   "license": "MIT",
+  "engines": {
+    "node": ">=10.0.0"
+  },
   "jest": {
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
@@ -56,6 +59,7 @@
       "plugin:@typescript-eslint/recommended"
     ],
     "rules": {
+      "@typescript-eslint/explicit-function-return-type": "off",
       "@typescript-eslint/no-explicit-any": "off",
       "@typescript-eslint/indent": [
         "error",
